# SOLID-Principles

./: .gitignore  README.md
Dependency-Inversion/: CMakeLists.txt  README.md
Dependency-Inversion/header/: DatabaseWriter.h  EncryptService.h  FileReader.h  IReader.h  IWriter.h  WebServiceReader.h
Dependency-Inversion/src/: DatabaseWriter.cpp  EncryptService.cpp  FileReader.cpp  WebServiceReader.cpp  main.cpp
Interface-Segregation/: CMakeLists.txt  README.md
Interface-Segregation/header/: Bird.h  Dog.h  IBarkable.h  IFlyable.h
Interface-Segregation/src/: Bird.cpp  Dog.cpp  main.cpp
Liskov-Substitution/: CMakeLists.txt  README.md
Liskov-Substitution/header/: Rectangle.h  Shape.h  Square.h
Liskov-Substitution/src/: Rectangle.cpp  Square.cpp  main.cpp
Open-Closed/: CMakeLists.txt  README.md
Open-Closed/header/: Circle.h  Graphics.h  Rectangle.h  Shape.h  Square.h
Open-Closed/src/: Circle.cpp  Rectangle.cpp  Square.cpp  main.cpp
Single-Responsibility/: CMakeLists.txt  README.md
Single-Responsibility/header/: AudioPlayer.h  CloudStorage.h  FileStorage.h  IWriter.h  MediaPlayer.h  VideoPlayer.h
Single-Responsibility/src/: AudioPlayer.cpp  CloudStorage.cpp  FileStorage.cpp  MediaPlayer.cpp  VideoPlayer.cpp  main.cpp
